# test_minify_html

./: README.md  pyproject.toml  test_minify_html.py
htmlmin/: A000020.html  A000040.html  A000050.html  A000060.html  A000070.html  A000080.html  A000100.html  A000120.html  A000140.html  A000150.html  A000180.html  A000210.html  A000220.html  A000230.html  A000240.html  A000250.html  A000270.html  A000300.html  A000320.html  A000370.html  A000390.html  A000400.html  A000430.html  A000440.html  A000480.html  A000490.html  A000500.html  A000520.html  A000540.html  A000590.html  A000640.html  A000650.html  A000660.html  A000670.html  A000680.html  A000700.html  A000720.html  A000760.html  A000800.html  A000810.html  (+60 more)
htmls/: A000020.html  A000040.html  A000050.html  A000060.html  A000070.html  A000080.html  A000100.html  A000120.html  A000140.html  A000150.html  A000180.html  A000210.html  A000220.html  A000230.html  A000240.html  A000250.html  A000270.html  A000300.html  A000320.html  A000370.html  A000390.html  A000400.html  A000430.html  A000440.html  A000480.html  A000490.html  A000500.html  A000520.html  A000540.html  A000590.html  A000640.html  A000650.html  A000660.html  A000670.html  A000680.html  A000700.html  A000720.html  A000760.html  A000800.html  A000810.html  (+60 more)
minify_html/: A000020.html  A000040.html  A000050.html  A000060.html  A000070.html  A000080.html  A000100.html  A000120.html  A000140.html  A000150.html  A000180.html  A000210.html  A000220.html  A000230.html  A000240.html  A000250.html  A000270.html  A000300.html  A000320.html  A000370.html  (+80 more)
