[tool.poetry]
name = "testmin"
version = "0.1.0"
description = ""
authors = ["Junho OH <pinedance@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
minify-html = "^0.9.2"
htmlmin = "^0.1.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
